--- a/templates_v2/index_v2.html
+++ b/templates_v2/index_v2.html
@@ -353,7 +353,16 @@
                         'DNfuF1L62WWyW3pNakVkyGGFzVVhj4Yr52jSmdTyeBHm'
                     ];
                     
-                    if (knownProblematicWallets.includes(wallet) || wallet.length === 44) {
+                    if (knownProblematicWallets.includes(wallet)) {
+                        showError(`
+                            <strong>⚠️ Known API Issue</strong><br>
+                            Cielo's API returns no data for this wallet even though their website shows 3,718 trades.<br>
+                            This is a confirmed issue with Cielo's API for certain wallets.<br>
+                            <small style="color:#666;">Unfortunately, we can't access this wallet's data through the API.</small><br>
+                            <small style="color:#666;">You can view it directly on <a href="https://app.cielo.finance/profile/${wallet}" target="_blank">Cielo's website</a>.</small><br>
+                            <small style="color:#666;">Try a different wallet: 34zYDgjy8oinZ5y8gyrcQktzUmSfFLJztTSq5xLUVCya</small>
+                        `);
+                    } else if (wallet.length === 44) {
                         // Longer addresses (44 chars) sometimes have API issues
                         showError(`
                             <strong>⚠️ Possible API Data Issue</strong><br>
