--- a/templates_v2/index_v2.html
+++ b/templates_v2/index_v2.html
@@ -284,6 +284,12 @@
             <div style="margin-top:30px;">
                 <h4 style="color:#666;">💬 Real Talk About Your Trading</h4>
                 <div id="personalMessage" style="background:white; padding:20px; border-radius:8px; border-left:4px solid #007bff; font-size:16px; line-height:1.6;"></div>
+                
+                <!-- Add annotation prompt -->
+                <div style="margin-top:20px; padding:15px; background:#f0f8ff; border-radius:8px; font-size:14px;">
+                    <strong>💡 Make this smarter:</strong> Click "+ Note" on any trade above to add context. 
+                    The more you explain your trades, the better the insights become.
+                </div>
             </div>
         </div>
     </div>
