Rename project from WalletDoctor to Tradebro - Update all references, class names, imports, and documentation - Rename src/walletdoctor to src/tradebro - Update WalletDoctorBot to TradeBroBot - Update all documentation and examples

--- a/templates_v2/index_v2.html
+++ b/templates_v2/index_v2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WalletDoctor - Personal Trading Coach</title>
+    <title>Tradebro - Personal Trading Coach</title>
     <style>
         * { box-sizing: border-box; margin: 0; padding: 0; }
         
@@ -203,7 +203,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>🏥 WalletDoctor - Personal Trading Coach</h1>
+                    <h1>🏥 Tradebro - Personal Trading Coach</h1>
         <p>Instant insights. Your patterns. No judgment.</p>
     </div>
 
@@ -344,7 +344,7 @@
                     showError(`
                         <strong>⚠️ Wallet Has Too Many Tokens</strong><br>
                         This wallet has traded more than 1,000 different tokens.<br>
-                        WalletDoctor currently can't process wallets with this many tokens in the free version.<br>
+                        Tradebro currently can't process wallets with this many tokens in the free version.<br>
                         <small style="color:#666;">Stats shown are based on the first 1,000 tokens only.</small><br>
                         <small style="color:#666;">Try a wallet with fewer tokens traded.</small>
                     `);
